--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="name_hint">Name</string>
     <string name="lastname_hint">Lastname</string>
     <string name="age_hint">Age</string>
-    <string name="logout">Logout</string>
+    <string name="message_successfully_sent">Message successfully sent</string>
+    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
+    <string name="you_must_be_at_least_16_years_old">You must be at least 16 years old</string>
+    <string name="incorrect_age_specified">Incorrect age specified</string>
 </resources>
